<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/newsfeed"
        android:title="Home"
        android:icon="@drawable/ic_home_black_24dp"
        />
    <item
        android:id="@+id/profile"
        android:title="Profile"
        android:icon="@drawable/ic_user"
        />
    <item
        android:id="@+id/aboutus"
        android:title="About us"
        android:icon="@drawable/ic_add_box_black_24dp"
        />





</menu>
