...



    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btnEditProfile"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="Edit Proile"
        android:background="@drawable/buttonlayout"
        style="@style/button"
        android:textAllCaps="false"
...
